--- a/index.html
+++ b/index.html
@@ -6,99 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class4ever 开源社区</title>
     <link rel="stylesheet" href="//static.class4ever.com/layui/v2.5.5/css/layui.css">
-    <style>
-        body {
-            background: #999;
-            padding: 20px 40px;
-        }
-
-        .filter button {
-            display: block;
-            margin-left: 0 !important;
-            margin-bottom: 10px;
-        }
-
-        .layui-btn-sm {
-            font-size: 14px;
-        }
-
-        .layui-btn-warm {
-            color: #000;
-        }
-
-        #app {
-            display: flex;
-        }
-
-        nav {
-            background: #000;
-            color: #fff;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 45px;
-            z-index: 999;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            padding-left: 20px;
-        }
-
-        .link a {
-            text-decoration: underline;
-            display: inline-block;
-            margin: 5px;
-        }
-
-        .more {
-            height: 50px;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-        }
-
-        aside#left {
-            width: 160px;
-            margin-right: 20px;
-            position: fixed;
-        }
-
-        .logo {
-            font-size: 14px;
-            font-weight: 400;
-        }
-
-        main {
-            width: 590px;
-            margin-bottom: 30px;
-            margin-right: 20px;
-            margin-left: 180px;
-        }
-
-        .go-to-top {
-            position: fixed;
-            z-index: 99999;
-            bottom: 10px;
-            right: 10px;
-            width: 80px;
-            height: 60px;
-            background: rgba(255, 255, 255, .2);
-            display: none;
-            border-radius: 5px;
-            text-align: center;
-            padding-top: 15px;
-        }
-
-        .go-to-top:hover {
-            cursor: pointer;
-        }
-
-        [v-cloak] {
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
@@ -262,198 +170,6 @@
 </body>
 <script src="//static.class4ever.com/layui/v2.5.5/layui.all.js"></script>
 <script src="//static.class4ever.com/vuejs/v2.6.12/vue.min.js"></script>
-<script>
-    var $ = layui.$
-    const app = new Vue({
-        el: '#app',
-        data: {
-            list: [],
-            type_current: 'all',
-            page_current: 1,
-            is_loading: false,
-            is_end: false,
-            hotlink: [{
-                uri: '//www.v2ex.com',
-                site_name: 'V2EX'
-            },
-            {
-                uri: '//github.com',
-                site_name: 'GitHub'
-            },
-            {
-                uri: '//segmentfault.com/',
-                site_name: 'SegmentFault'
-            },
-            {
-                uri: '//stackoverflow.com/',
-                site_name: 'Stack Overflow'
-            },
-            {
-                uri: '//dev.to/',
-                site_name: 'DEV Community'
-            },
-            {
-                uri: '//www.cnblogs.com/',
-                site_name: '博客园'
-            },
-            {
-                uri: '//www.oschina.net',
-                site_name: 'OSCHINA'
-            },
-            {
-                uri: '//www.toutiao.com',
-                site_name: '今日头条'
-            },
-            {
-                uri: '//www.twle.cn',
-                site_name: '简单教程'
-            },
-            {
-                uri: '//www.36kr.com',
-                site_name: '36氪'
-            },
-            {
-                uri: 'https://gitee.com',
-                site_name: 'Gitee'
-            },
-            {
-                uri: 'https://whois.chinaz.com/',
-                site_name: 'Whois查询'
-            },
-            {
-                uri: 'https://icp.chinaz.com/',
-                site_name: 'ICP查询'
-            },
-            {
-                uri: 'https://blog.class4ever.com/',
-                site_name: '话语的服侍'
-            },
-            {
-                uri: 'https://gitee.com/ricky1986',
-                site_name: 'ricky@Gitee'
-            },
-            {
-                uri: 'https://github.com/ricky1986',
-                site_name: 'ricky@GitHub'
-            },
-
-            ],
-        },
-        mounted: function () {
-            this.get_data()
-
-            this.watch_height()
-
-
-        },
-        methods: {
-            watch_height: function () {
-                //距离顶部大于100时出现到顶部按钮
-                $(window).on('scroll', () => {
-                    var fromTop = $(window).scrollTop(); // 已滚动卷去的高度
-                    let windowHeight = $(window).height(); // 可视窗口的高度
-
-                    if (fromTop > 100)
-                        $('.go-to-top').fadeIn()
-                    else
-                        $('.go-to-top').fadeOut()
-                })
-            },
-
-            /** 搞数据 */
-            get_data: function () {
-                this.is_loading = true
-                let api = 'https://api.class4ever.com/updatelog'
-                $.get(api, {
-                    type: this.type_current,
-                    page: this.page_current
-                }, function (res) {
-                    res = JSON.parse(res)
-                    // console.log(res)
-                    if (res.code === 200) {
-                        app.list = app.list.concat(res.data.list)
-                        if (res.data.list.length < res.data.page_size)
-                            app.is_end = true
-                        app.is_loading = false
-                    }
-                })
-            },
-
-            /**更改分类 */
-            set_type: function (type) {
-                this.type_current = type
-                this.page_current = 1
-                this.list = []
-                this.is_end = false
-                this.get_data()
-                this.go_to_top()
-            },
-
-            /**取得类别 */
-            get_type: function (site_id) {
-                let table = {
-                    1: {
-                        route: 'blog',
-                        name: '博客',
-                        style: 'layui-btn-normal'
-                    },
-                    10: {
-                        route: 'system',
-                        name: '系统',
-                        style: 'layui-btn-danger'
-
-                    },
-                    11: {
-                        route: 'christian',
-                        name: '基督徒公众号',
-                        style: ''
-                    },
-                    12: {
-                        route: 'shuoshuo',
-                        name: '说说',
-                        style: 'layui-btn-primary'
-                    }
-                }
-
-                return table[site_id]
-            },
-
-            /**
-                应用时间格式:
-                   @param format string 如'Y-m-d H:i:s'
-                   @param unixtime int Unix时间戳, 如 1604389233
-
-                   目前只支持关键字Y,m,d,H,i,s
-            */
-            date: function (format, unixtime) {
-                t = new Date(unixtime * 1000)
-                let Y = t.getFullYear()
-                let m = (t.getMonth() + 1) < 10 ? ('0' + (t.getMonth() + 1)) : (t.getMonth() + 1)
-                let d = t.getDate() < 10 ? ('0' + t.getDate()) : t.getDate()
-                let H = t.getHours() < 10 ? '0' + t.getHours() : t.getHours()
-                let i = t.getMinutes() < 10 ? '0' + t.getMinutes() : t.getMinutes()
-                let s = t.getSeconds() < 10 ? '0' + t.getSeconds() : t.getSeconds()
-
-                return format.replace(/Y/g, Y).replace(/m/g, m).replace(/d/g, d).replace(/H/g, H).replace(/i/g, i).replace(/s/g, s)
-            },
-
-            /**搞到更多 */
-            more: function () {
-                this.page_current++
-                this.get_data()
-            },
-
-            nl2br: function (str) {
-                return (str + '').replace(/([^>\r\n]?)(\r\n|\n\r|\r|\n)/g, '$1<br>$2');
-            },
-
-            go_to_top: function () {
-                $("html,body").animate({
-                    scrollTop: 0
-                }, 100);
-            },
-        }
-    })
-</script>
+<script src="app.js"></script>
 
 </html>
