--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="layui-card">
                 <div class="layui-card-header">微信公众号</div>
                 <div class="layui-card-body" style="text-align:center;">
-                    <img src="https://www.class4ever.com/_static/images/wechat_mp.jpg" alt="基督徒" style="width:150px;">
+                    <img src="/image/wechat.jpg" alt="基督徒" style="width:150px;">
                 </div>
             </div>
 
