--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
     <title>Class4ever 开源社区</title>
     <link rel="stylesheet" href="//static.class4ever.com/layui/v2.5.5/css/layui.css">
     <link rel="stylesheet" href="app.css">
+    <style>
+        .title-box {
+            padding: 5px 12px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .title {
+            font: 14px Helvetica Neue, Helvetica, PingFang SC, Tahoma, Arial, sans-serif;
+            font-family: PingFang SC, Hiragino Sans GB, Microsoft YaHei, WenQuanYi Micro Hei, Helvetica Neue, Arial, sans-serif;
+            -webkit-font-smoothing: antialiased;
+            list-style: none;
+            font-size: 20px;
+            line-height: 1.3;
+            font-weight: 600;
+            margin: 0;
+            vertical-align: baseline;
+            max-height: 1000000px;
+            -webkit-tap-highlight-color: transparent;
+            box-sizing: border-box;
+            background: 0 0;
+            text-decoration: none;
+            outline: 0;
+            cursor: pointer;
+            transition: color .2s ease;
+            color: #222;
+            line-height: 32px;
+        }
+
+        .title-box a:hover {
+            text-decoration: underline;
+            color: #1e6ddd;
+        }
+
+        .shuoshuo {
+            line-height: 33px;
+        }
+    </style>
 </head>
 
 <body>
@@ -46,14 +83,16 @@
 
             <div v-for="(v,k) in list" class="layui-card">
                 <div class="layui-card-body" style="padding:0;">
-                    <div style="padding:6px 15px;font-size:18px;border-bottom:1px solid #eee;line-height:30px;">
+
+                    <div class="title-box">
                         <template v-if="v.uri">
-                            <a :href="v.uri" target="_blank" v-html="nl2br(v.title)" style="color:#000;"></a>
+                            <a :href="v.uri" target="_blank" v-html="nl2br(v.title)" class="title"></a>
                         </template>
                         <template v-else>
-                            <span v-html="nl2br(v.title)" style="font-size:15px;"></span>
+                            <span v-html="nl2br(v.title)" style="font-size:15px;" class="shuoshuo"></span>
                         </template>
                     </div>
+
                     <div style="padding:5px 10px;">
                         <button @click="set_type(get_type(v.site_id).route)" :class="get_type(v.site_id).style"
                             class="layui-btn layui-btn-sm">{{ get_type(v.site_id).name }}</button>
