--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         .shuoshuo {
             line-height: 33px;
         }
+
+        #app {
+            width: 1200px;
+            margin: 0 auto;
+        }
     </style>
 </head>
 
